tests/fixtures/invalid/str_div_bytes.py
# Cannot divide Str and Bytes
x: float = "hello" / b"hello"
